gedcomfy/tests/snapshots/tests__encodings@ansel_specified_malformed_badchar.ged-2.snap
---
source: gedcomfy/tests/tests.rs
description: "0 HEAD\r\n1 GEDC\r\n2 VERS 5.5.1\r\n1 CHAR ANSEL\r\n0 MACRON¯\r\n0 TRLR\r\n"
expression: "format!(\"{:?}\",\n    Report::new(err).with_source_code(NamedSource::new(filename, data)))"
input_file: gedcomfy/tests/encoding_inputs/ansel_specified_malformed_badchar.ged
---
gedcom::parse_error::invalid_tag

  × GEDCOM file contains a syntax error
  ╰─▶ Invalid character in tag
   ╭─[ansel_specified_malformed_badchar.ged:5:9]
 4 │ 1 CHAR ANSEL
 5 │ 0 MACRON¯
   ·         ┬
   ·         ╰── this character is not permitted in a tag
 6 │ 0 TRLR
   ╰────
  help: tag names may only contain the characters a-z, A-Z, and 0-9, or a leading underscore
